--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-   
-        <h1>Hello HTML!</h1>
-   <img src="img/grogu.webp" alt="Grogu">
+    
+    <h1>Hello HTML!</h1>  
+
+    
+    <img scr="img/grogu.webp" alt    ="Grogu">
 
 </body>
 
